<?xml version="1.0" encoding="utf-8"?>
<resources xmlns:xliff="http://schemas.android.com/apk/res/android">

    <string name="app_name">Sunshine</string>
    <string name="action_settings">Settings</string>
    <string name="refresh">refresh</string>
    <string name="title_activity_detail">DetailActivity</string>
    <string name="title_activity_settings">SettingsActivity</string>
    <string name="pref_location_key">location</string>
    <string name="pref_location_label">Location</string>
    <string name="location_default">94043</string>
    <string name="pref_unit_label">Temperature units</string>
    <string name="pref_unit_key">temperatureUnit</string>
    <string name="prefs_units_imperial">imperial</string>
    <string name="prefs_server_status">serverStatus</string>
    <string name="prefs_location_invalid_error_description">Invalid Location (<xliff:g id="location_settings">%1$s</xliff:g>)</string>
    <string name="prefs_location_unknown_description">Validating Location… (<xliff:g id="location_settings">%1$s</xliff:g>) </string>
    <string name="viewLocation">View current location</string>
    <string name="share">Share</string>
    <string name="forecastIcon">forecast icon</string>
    <string name="today">hoy</string>
    <string name="tomorrow">manana</string>
    <string name="humidity">Humidity</string>
    <string name="pressure">Pressure</string>
    <string name="wind">Wind</string>

    <string name="format_notification">
        Forecast: <xliff:g id="condition">%1$s</xliff:g> <xliff:g id="temperatureMax">%2$s</xliff:g> <xliff:g id="temperatureMin">%3$s</xliff:g>
    </string>
    <string name="pref_last_notification">last_notification</string>
    <string name="pref_enable_notifications_key" translatable="false">enable_notifications</string>
    <string name="pref_enable_notifications_label">Weather Notifications</string>

    <string name="pref_enable_notifications_true">Enabled</string>
    <string name="pref_enable_notifications_false">Not Enabled</string>
    <string name="pref_enable_notifications_default" translatable="false">true</string>

    <string-array name="pref_units_values">
        <item>imperial</item>
        <item>metric</item>
    </string-array>

    <string-array name="pref_units_options">
        <item>Imperial</item>
        <item>Metric</item>
    </string-array>

    <!-- SyncAdapter related -->
    <string name="sync_account_type">com.android.sunshine.app</string>
    <string name="content_authority">com.android.sunshine.app</string>
    <string name="noWeatherInfoAvailable">No weather information available</string>
    <string name="noWeatherInfoAvailableNoNetwork">No weather information available. The network is not available to fetch weather data.</string>
    <string name="server_down">No weather info available. The server is down.</string>
    <string name="server_error">No weather data available. The server is not returning valid data.</string>
    <string name="invalid_location">No weather information available. The location in settings is not recognized by the weather server.</string>

    <string name="detail_icon_transition_name" translatable="false">TN_DetailIcon</string>

    <string name="title_widget_today">Sunshine Today</string>
    <string name="title_widget_detail">Sunshine Details</string>
    <string name="ok">OK</string>

</resources>
