...
        android:layout_height="@dimen/abc_list_item_padding_horizontal_material"
        app:layout_columnSpan="2"
        app:layout_columnWeight="1"
        app:layout_rowWeight="1" />

    <TextView
        android:id="@+id/detail_date_textview"
        android:layout_marginBottom="@dimen/abc_list_item_padding_horizontal_material"
        android:layout_marginTop="@dimen/abc_list_item_padding_horizontal_material"
        android:fontFamily="sans-serif"
        android:gravity="center_horizontal"
        android:textAppearance="@style/TextAppearance.AppCompat.Title"
        android:textColor="@color/secondary_text"
...
